--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
-    <meta property = "og:image" content="og_image.png" >
+<!--     <meta property = "og:image" content="og_image.png" > -->
     <meta property = "og:title" content="Vishu's Resume">
-    <meta propert = "og:description" content="Rank In Top 20 IIT Delhi Hackathon, Pariticipate in Online Coding Competion, Rank among top 75% coder on leetcode,Web Developer">
+<!--     <meta propert = "og:description" content="Rank In Top 20 IIT Delhi Hackathon, Pariticipate in Online Coding Competion, Rank among top 75% coder on leetcode,Web Developer"> -->
 </head>
 
 <body>
